--- a/index.ipynb
+++ b/index.ipynb
@@ -346,7 +346,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    return list(filter(lambda restaurant : not restaurants['is_closed'],restaurants))\n",
-    "        "
+    "    return list(filter(lambda restaurant: not restaurant['is_closed'], restaurants))"
    ]
   },
   {
