--- a/index.ipynb
+++ b/index.ipynb
@@ -345,7 +345,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "\n",
+    "    return list(filter(lambda restaurant : not restaurants['is_closed'],restaurants))\n",
     "    return list(filter(lambda restaurant : not restaurant['is_closed'], restaurants))"
    ]
   },
