--- a/index.ipynb
+++ b/index.ipynb
@@ -419,7 +419,7 @@
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    return list(filter(, restaurants))"
+    "    return list(filter(format_restaurants, restaurants))"
    ]
   },
   {
