--- a/index.ipynb
+++ b/index.ipynb
@@ -414,12 +414,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    return list(filter(format_restaurants, restaurants))"
+    "    return list(filter(format_restaurants >1 , restaurants))"
    ]
   },
   {
