--- a/index.ipynb
+++ b/index.ipynb
@@ -414,21 +414,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "positional argument follows keyword argument (<ipython-input-84-9d3d34401637>, line 2)",
+     "evalue": "positional argument follows keyword argument (<ipython-input-86-90f970c5b88f>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-84-9d3d34401637>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return list(filter(format_restaurants = 1 , restaurants))\u001b[0m\n\u001b[0m                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-86-90f970c5b88f>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return list(filter(format_restaurants = 1,restaurants))\u001b[0m\n\u001b[0m                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
      ]
     }
    ],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    return list(filter(format_restaurants = 1,restaurants))"
+    "    return list(filter(lambda restaformat_restaurants == 1,restaurants))"
    ]
   },
   {
